Expermient with configmap
